# Responsible_LLM_Reproducibility

./: .gitignore  CITATION.cff  FINAL_GITHUB_READINESS_REPORT.md  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt
config/: analysis_config.yaml  expected_results.json  fnmwcf_lexicon.json  marker_patterns.json
data/: README.md
data/prompts/: persona_metadata.csv  prompts_cchs.csv
data/ratings/: pilot_ratings.csv
data/responses/: ollama_results_deepseek-r1_8b.csv  ollama_results_llama3.2_latest.csv  ollama_results_mistral_7b.csv
docs/: Code_to_Paper_Map.md  Data_Dictionary.md  Data_Provenance.md  Limitations.md  Methods_Reproduction.md  Model_Environment.md  Repository_Contents.md
notebooks/: ScientificReports_Full_Reproduction.ipynb
outputs/tables/: T_fnmwcf_coverage.csv  T_markers.csv  T_persona_verification.csv  T_pilot_ratings.csv  T_readability.csv  T_response_diagnostics.csv  T_top_keywords.csv  T_trimming_sensitivity.csv
outputs/validation/: validation_checks.csv  validation_report.json
scripts/: _bootstrap.py  build_repo_notebook.py  generate_figures.py  generate_tables.py  reproduce_all.py  validate_outputs.py  verify_environment.py
src/responsible_llm_audit/: __init__.py  config.py  figures.py  fnmwcf.py  io.py  keywords.py  markers.py  personas.py  pilot_ratings.py  preprocessing.py  prompts.py  readability.py  reproduce.py  statistics.py  tables.py  (+1 more)
tests/: conftest.py  test_expected_results.py  test_fnmwcf.py  test_keywords.py  test_markers.py  test_outputs_exist.py  test_readability.py  test_statistics.py
